v0.13.4/_sources/_generated/groups/images.rst.txt
.. role:: action-argument-required

Images
======

This section details Image-related Linode CLI commands.

.. _commands_images_list:

`list <https://techdocs.akamai.com/linode-api/reference/get-images>`_
---------------------------------------------------------------------


Returns a paginated list of images.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli images list [-h] [--is_public is_public]
    	[--deprecated deprecated] [--size size] [--tags [tags] ]
    	[--status status] [--vendor vendor] [--label label]
    	[--type type]
    	[--order-by {is_public,deprecated,size,tags,status,vendor,label,type}]
    	[--order {asc,desc}]


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli images list


.. cssclass:: action-subheading

    .. rubric:: Filterable Attributes


.. cssclass:: action-subheading-description

    Arguments used to define a filter for response entries.


.. rst-class:: action-filterable-field-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`--deprecated`
      - *boolean*
      - Whether this image is deprecated.
    * - :code:`--is_public`
      - *boolean*
      - Revealed as :code:`true` if the image is a public distribution image.
    * - :code:`--label`
      - *string*
      - A short description of the image.
    * - :code:`--size`
      - *integer*
      - The minimum size in MB this image needs to deploy.
    * - :code:`--status`
      - *string*
      - The current status of the image.
    * - :code:`--tags`
      - *array[string]*
      - Tags used for organizational purposes.
    * - :code:`--type`
      - *string*
      - How the image was created.
    * - :code:`--vendor`
      - *string*
      - The upstream distribution vendor.


------------

.. _commands_images_view:

`view <https://techdocs.akamai.com/linode-api/reference/get-image>`_
--------------------------------------------------------------------


Get information about a single image.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli images view [-h] [--status status]
    	[--is_public is_public] [--deprecated deprecated]
    	[--size size] [--tags [tags] ] [--vendor vendor] [--label label]
    	[--type type]
    	[--order-by {status,is_public,deprecated,size,tags,vendor,label,type}]
    	[--order {asc,desc}] imageId


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli images view linode/debian9


.. cssclass:: action-subheading

    .. rubric:: Parameters

.. cssclass:: action-subheading-description

    Positional parameters used to define the resource this command should target.


.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`imageId`
      - string
      - The unique identifier assigned to the image after creation.


------------

.. _commands_images_create:

`create <https://techdocs.akamai.com/linode-api/reference/post-image>`_
-----------------------------------------------------------------------


Captures a private, gold-master image from a Linode disk.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli images create [-h] [--disk_id disk_id]
    	[--cloud_init cloud_init] [--label label]
    	[--description description] [--tags tags]


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli images create \
    	--label this_is_a_label \
    	--description "A longer description \
    		of the image" \
    	--disk_id 123


.. cssclass:: action-subheading

    .. rubric:: Arguments

.. cssclass:: action-subheading-description

    Additional fields used to execute this request.


.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 10 10 79

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--disk_id`
      - :action-argument-required:`Yes`
      - integer
      - The ID of the Linode Disk that this image will be created from.
    * - :code:`--cloud_init`
      - No
      - boolean
      - Whether this image supports `cloud-init <https://www.linode.com/docs/guides/write-files-with-cloud-init/>`_.
    * - :code:`--description`
      - No
      - string
      - A detailed description of this image.
    * - :code:`--label`
      - No
      - string
      - A short title of this image.
    * - :code:`--tags`
      - No
      - array[string]
      - Tags used for organizational purposes.


------------

.. _commands_images_update:

`update <https://techdocs.akamai.com/linode-api/reference/put-image>`_
----------------------------------------------------------------------


Updates a private image that you have permission to :code:`read_write`.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli images update [-h] [--label label] [--regions regions]
    	[--regions.region region] [--regions.status status]
    	[--description description] [--tags tags] imageId


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli images update private/12345 \
    	--label "My gold-master image" \
    	--description "The detailed description \
    		of my image."


.. cssclass:: action-subheading

    .. rubric:: Parameters

.. cssclass:: action-subheading-description

    Positional parameters used to define the resource this command should target.


.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`imageId`
      - string
      - The unique identifier assigned to the image after creation.

.. cssclass:: action-subheading

    .. rubric:: Arguments

.. cssclass:: action-subheading-description

    Additional fields used to execute this request.


.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 10 10 79

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--capabilities`
      - No
      - array[string]
      - A list of the possible capabilities of this image.
    * - :code:`--created`
      - No
      - string
      - When this image was created.
    * - :code:`--created_by`
      - No
      - string
      - The name of the user who created this image, or :code:`linode` for public images.
    * - :code:`--deprecated`
      - No
      - boolean
      - Whether this image is deprecated.
    * - :code:`--description`
      - No
      - string
      - A detailed description of this image.
    * - :code:`--eol`
      - No
      - string
      - The date of the public image's planned removal from service.
    * - :code:`--expiry`
      - No
      - string
      - Only images created automatically from a deleted compute instance (type=automatic) expire.
    * - :code:`--id`
      - No
      - string
      - The unique identifier for each image.
    * - :code:`--is_public`
      - No
      - boolean
      - Revealed as :code:`true` if the image is a public distribution image.
    * - :code:`--label`
      - No
      - string
      - A short description of the image.
    * - :code:`--regions`
        :ref:`(section) <commands_images_update_argument_sections_regions>`
      - No
      - object
      - N/A
    * - :code:`--size`
      - No
      - integer
      - The minimum size in MB this image needs to deploy.
    * - :code:`--status`
      - No
      - string
      - The current status of the image.
    * - :code:`--tags`
      - No
      - array[string]
      - Tags used for organizational purposes.
    * - :code:`--total_size`
      - No
      - integer
      - The total size in bytes of all instances of this image, in all :code:`regions`.
    * - :code:`--type`
      - No
      - string
      - How the image was created.
    * - :code:`--updated`
      - No
      - string
      - When this image was last updated.
    * - :code:`--vendor`
      - No
      - string
      - The upstream distribution vendor.
.. _commands_images_update_argument_sections_regions:

.. cssclass:: action-argument-section-header

    regions

.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 10 10 79

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--regions.region`
      - No
      - string
      - The unique identifier for the core compute or distributed compute region where this image is located.
    * - :code:`--regions.status`
      - No
      - string
      - The status of the image in this :code:`region`.


------------

.. _commands_images_delete:

`delete <https://techdocs.akamai.com/linode-api/reference/delete-image>`_
-------------------------------------------------------------------------


Deletes a private image you have permission to :code:`read_write`.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli images delete [-h] imageId


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli images delete 12345


.. cssclass:: action-subheading

    .. rubric:: Parameters

.. cssclass:: action-subheading-description

    Positional parameters used to define the resource this command should target.


.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`imageId`
      - string
      - The unique identifier assigned to the image after creation.


------------

.. _commands_images_replicate:

`replicate <https://techdocs.akamai.com/linode-api/reference/post-replicate-image>`_
------------------------------------------------------------------------------------


Target an existing image and replicate it to another compute region.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli images replicate [-h] [--regions regions] imageId


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli images update private/12345/regions \
    	--regions "us-iad, us-west"


.. cssclass:: action-subheading

    .. rubric:: Parameters

.. cssclass:: action-subheading-description

    Positional parameters used to define the resource this command should target.


.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`imageId`
      - string
      - The unique identifier assigned to the image after creation.

.. cssclass:: action-subheading

    .. rubric:: Arguments

.. cssclass:: action-subheading-description

    Additional fields used to execute this request.


.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 10 10 79

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--regions`
      - No
      - array[string]
      - The unique identifier for each compute region.



.. _commands_images_upload:

`upload <https://techdocs.akamai.com/linode-api/reference/post-upload-image>`_
------------------------------------------------------------------------------


Creates a new private image instance and returns a URL as the :code:`upload_to` object in the response.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli images upload [-h] [--region region]
    	[--cloud_init cloud_init] [--tags tags]
    	[--description description] [--label label]


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    # Upload the image file in a single step
    linode-cli image-upload \
    	--description "Optional details about the Image" \
    	--label "Example Image" \
    	--region us-east \
    	/path/to/image-file.img.gz

    # Returns the upload_to URL
    linode-cli images upload \
    	--description "Optional details about the Image" \
    	--label "Example Image" \
    	--region us-east


.. cssclass:: action-subheading

    .. rubric:: Arguments

.. cssclass:: action-subheading-description

    Additional fields used to execute this request.


.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 10 10 79

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--label`
      - :action-argument-required:`Yes`
      - string
      - Label for the uploaded image.
    * - :code:`--region`
      - :action-argument-required:`Yes`
      - string
      - The region to upload to.
    * - :code:`--cloud_init`
      - No
      - boolean
      - Whether the uploaded Image supports cloud-init.
    * - :code:`--description`
      - No
      - string
      - Description for the uploaded image.
    * - :code:`--tags`
      - No
      - array[string]
      - Tags you can use to organize images.



